# OOP_AI-AGENT

./: CMakeList.txt  CMakeLists.txt  OOP_Project_PhanViec.md  README.md
benchmark/: run_eval.cpp
include/: SkillLoader.h  Trajectory.h
skills/: step_verifier.md  task_planner.md
src/: SkillLoader.cpp  main.cpp
src/client/: llm_client.h
src/harness/: evaluator.h
src/skills/: error_recovery.md  task_planner.md
src/tools/: CalculatorTool.cpp  CalculatorTool.h  FileTool.cpp  FileTool.h  ToolRegistry.cpp  ToolRegistry.h  tool.h
